# omp-perf

./: CMakeLists.txt
atax-host-unroll/: CMakeLists.txt  atax-host-unroll.cpp
chunksize/: CMakeLists.txt  chunksize.cpp
heat-3d/: CMakeLists.txt  heat-3d.cpp
su3/: CMakeLists.txt  su3.cpp
